[package]
name = "tx-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.70"
borsh = "1.3.1"
clap = "4.4.18"
futures = "0.3.5"
futures-locks = "0.7.1"
humantime = "2.1.0"
lazy_static = "1.4.0"
prometheus = "0.13.1"
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = "0.1.12"
tracing = "0.1.34"

configuration.workspace = true
database.workspace = true
readnode-primitives.workspace = true
tx-details-storage.workspace = true

near-indexer-primitives.workspace = true
near-jsonrpc-client.workspace = true
near-lake-framework.workspace = true

[features]
validator = []
tracing-instrumentation = ["configuration/tracing-instrumentation"]
