[package]
name = "tx-indexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
anyhow = "1.0.51"
rustc_version = "0.4"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.70"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.5"
futures-locks = "0.7.1"
humantime = "2.1.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
prometheus = "0.13.1"
tokio = { version = "1.36.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-retry = "0.3"
tokio-stream = "0.1.12"
tracing = "0.1.34"

cache-storage.workspace = true
configuration.workspace = true
readnode-primitives.workspace = true
tx-details-storage.workspace = true

near-indexer-primitives.workspace = true
near-lake-framework.workspace = true

[features]
default = []
tracing-instrumentation = ["configuration/tracing-instrumentation"]
